Remove all traces of -XX:MaxPermSize option.
It was removed in Java 8 and has not any effect.
We do not use Java version earlier than 8.